fix: z-index of header

--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -7,6 +7,7 @@
   background: rgb(52, 50, 50) !important;
   transition: all 0.5s ease;
   animation: smoothScroll 1s forwards;
+  z-index: 999;
 }
 .navbar {
   flex: none;
